# arr

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: bazarr.md  kapowarr.md  lidarr.md  prowlarr.md  radarr-4k.md  radarr.md  sonarr.md
src/: abi_export.rs  clients.rs  lib.rs  lidarr.rs  prowlarr.rs  radarr.rs  sonarr.rs
src/clients/: auth.rs
